# similarity-map

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CURRENT-STATE.md  Cargo.toml  LEXICAL-SHINGLE-ROADMAP.md  LICENSE  README.md  Similarity Map - Design Specification.md
.kiro/specs/similarity-map/: .config.kiro  design.md  integration-contract.md  requirements.md  tasks.md
similarity-cli/: Cargo.toml
similarity-cli/fixtures/: pass_config_lexical_smoke.yaml  pass_config_smoke.yaml
similarity-cli/src/: analyze.rs  input.rs  main.rs  pass_config.rs  story.rs
similarity-cli/tests/: cli_smoke.rs
similarity-core/: Cargo.toml
similarity-core-py/: .gitignore  Cargo.toml  pyproject.toml
similarity-core-py/python/similarity_core/: __init__.py
similarity-core-py/src/: lib.rs
similarity-core-py/tests/: test_analyze_prose.py
similarity-core/fixtures/: analysis_output_v1.example.json
similarity-core/schemas/: analysis_output_v1.schema.json
similarity-core/src/: analysis.rs  analyze_prose.rs  benchmark.rs  cancellation.rs  centroid.rs  clustering.rs  color.rs  contract.rs  embedding.rs  hash.rs  importer.rs  job_data.rs  lexical.rs  lib.rs  model.rs  multi_pass.rs  ort_runtime.rs  rasterizer.rs  report.rs  rf_story.rs  spans.rs  subcell.rs  types.rs  visualization.rs  windowing.rs
similarity-core/src/storage/: crud.rs  mod.rs
similarity-core/tests/: lexical_fixtures.rs
src/: detail-panel.js  display-settings.js  dither.js  export-analysis-output.js  export-settings-yaml.js  grid.js  import-settings.js  index.html  job-activation.js  log-panel.js  main.js  model-download.js  navigation.js  progress-view.js  results-panel.js  rf-chapter-presets.js  session-dialog.js  settings-yaml-export.js  slider-input.js  style.css  text-preview.js  tolerance.js  tooltip.js  zoom.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis_output_store.rs  app_settings.rs  centroid.rs  clustering.rs  color.rs  commands.rs  display_state.rs  embedding.rs  events.rs  hash.rs  importer.rs  lib.rs  main.rs  model.rs  ort_runtime.rs  pipeline.rs  rasterizer.rs  results_catalog.rs  subcell.rs  types.rs
src-tauri/src/storage/: crud.rs  schema.rs
test-data/: sample-manuscript.txt
test-data/lexical/: anchors.json  exact_13para_dawn_subblock.txt  exact_baldwin_block.txt  near_dawn_block.txt  near_found_it_scene.txt  near_what_place_scene.txt  negative_formulaic.txt  short_sentence_paragraph.txt
