[package]
name = "similarity-cli"
version = "0.1.0"
edition = "2021"
description = "Headless CLI for similarity-core repetition analysis (JSON stdout)"
license = "MIT"

[[bin]]
name = "similarity-cli"
path = "src/main.rs"

[dependencies]
similarity-core = { path = "../similarity-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
similarity-core = { path = "../similarity-core" }
