[package]
name = "similarity-core-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 bindings for similarity-core analyze_prose"
license = "MIT"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similarity-core = { path = "../similarity-core" }
