[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "similarity-core"
version = "0.1.0"
description = "PyO3 bindings for similarity-core repetition analysis"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "similarity_core._native"
