[package]
name = "similarity-map"
version = "0.1.0"
edition = "2021"
description = "A Tauri 2 desktop app for detecting and visualizing phrase repetition in manuscripts"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
lancedb = "0.29"
arrow-schema = "58"
arrow-array = "58"
chrono = "0.4"
futures = "0.3"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
reqwest = { version = "0.12", features = ["stream"] }
regex = "1"
pdf-extract = "0.7"
log = "0.4"
hdbscan = "0.12"
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.22"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
