[package]
name = "similarity-map"
version = "0.1.0"
edition = "2021"
description = "A Tauri 2 desktop app for detecting and visualizing phrase repetition in manuscripts"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
similarity-core = { path = "../similarity-core" }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
arrow-array = "58"
sha2 = "0.10"
log = "0.4"
regex = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
